pub struct CoverageResult {
    pub exit_code: i32,
    pub lcov_content: Option<String>,
}
